--- a/ecommerce/config/locales/en.yml
+++ b/ecommerce/config/locales/en.yml
@@ -33,3 +33,6 @@ en:
   user.not_found: "Not found"
   picture: "should be less than 5MB"
   select_category: "Select Category"
+  success_create: Create Success
+  save: Save
+  new: New
